--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <modules>
         <module>spring-boot-quick-start</module>
         <module>spring-boot-random</module>
-        <module>spring-boot-mail</module>
+        <module>spring-boot-mail2</module>
         <module>spring-boot-json</module>
         <module>spring-boot-xml</module>
         <module>spring-boot-ssl</module>
@@ -17,7 +17,7 @@
         <module>spring-boot-logging</module>
         <module>spring-boot-profile</module>
         <module>spring-boot-auto-configure</module>
-        <module>spring-boot-banner</module>
+        <module>spring-boot-banner2</module>
         <module>spring-boot-test</module>
     </modules>
     <packaging>pom</packaging>
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
     </parent>
 
     <properties>
